remove java11 feature